@startuml
abstract class Command {
        +execute(ui: Ui, sc: Scanner, milestones: Milestones, typingTimer: TypingTimer,
                 typingAccuracy: TypingAccuracy, typingTargetList: TypingTargetList,
                 typingTargets: TypingTargets, state: State, autoAdjust: AutoAdjust): void
        +isExit(): boolean
    }

    class ExitCommand
    class HighscoreCommand
    class ListtargetsCommand
    class MilestoneCommand
    class StartCommand
    class TargetscoreaddCommand
    class TargetspeedaddCommand
    class TypingAccuracyCommand

    Command <|-- ExitCommand
    Command <|-- HighscoreCommand
    Command <|-- ListtargetsCommand
    Command <|-- MilestoneCommand
    Command <|-- StartCommand
    Command <|-- TargetscoreaddCommand
    Command <|-- TargetspeedaddCommand
    Command <|-- TypingAccuracyCommand
@enduml
